basic rescusrion to scroll into view

--- a/static/popup.html
+++ b/static/popup.html
@@ -15,6 +15,8 @@
     <p>Edit <u>static/popup.html</u> to change this page!</p>
 
     <button id="go-to-options" class="button" style="margin-top: 2rem;">Open options page</button>
+
+    <button id="like-videos" class="button" style="margin-top: 2rem;">Start liking</button>
   </div>
 
   <script src="popup.js"></script>
